--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
             margin: 0;
             max-width: 80%;
         ">
-        
+
         <p style="font-family:'Moul'; color: #efc455; size: 10px; margin-top: 30px;">
-            ឯកឧត្តម ម៉ក់ ហ៊ុយ ព្រមទាំង លោកជំទាវ
+            ឯកឧត្តម ម៉ក់ ហ៊ុយ
         </p>
     </div>
 
