--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@
                     alt="Invitation Image">
 
                 <div class="absolute inset-0 flex flex-col items-center p-6 text-center">
-                
                     <div id="names-background-box" 
                         class="absolute top-1/2 left-1/2 h-24 sm:h-24 w-full mx-auto flex items-center justify-center text-center"
                         style="
@@ -155,7 +154,7 @@
                             max-width: 80%;
                         ">
 
-                        <p id="tag_name_list" style="font-family:'Moul'; color: #efc455; size: 10px; margin-top: 30px;">
+                        <p id="tag_name_list" style="font-family:'Moul'; color: #efc455; margin-top: 30px; font-size: 13px;">
                             កំពុងផ្ទុក...
                         </p>
                     </div>
