--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                             // Update the name if found, otherwise use the default
                             if (foundName) {
                                 foundNameText = foundName;
-                                unlockButtonText = 'ចុចនៅទីនេះដើម្បីបើក (Open for You)'; 
+                                unlockButtonText = ' '; 
                             }
                         }
 
